Finished the tailwind design for the lightbox for all comments, added in mobile responsiveness for lightbox, tested the add comment and like which still work, fixed the scroll bar and overflow on the comments, matched the state on the timeline so when adding a comment on the lightbox it appears in both places, created a reducer,context and custom hook to use the lightbox. Still needs a little work t

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,14 @@
   .center-fixed{
     transform:translate(-50%, -50%);
   }
+  .lightbox-open{
+      /* overflow-y: hidden; */
+      filter:blur(2px);
+      position: fixed;
+      width:100vw;
+      /* overflow:hidden; */
+  }
+  .comment-grow{
+    flex-grow:5;
+  }
 }
